@@ -1,3 +1,4 @@
+* Allow grouping by date products by location
 * Ignore consumable products when inactivating locations
 
 Version 6.4.0 - 2022-05-02
